# dfmm

./: README.md
cmk/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.dfmm
doc/doxy_header/: mainpage.h
examples/: CMakeLists.txt  main_aca.C  main_aca316.C  main_bbfmm.C  main_dfmm.C  main_interpolator.C  main_octree.C  main_points.C  main_symmetries.C  test_bbfmm.C  test_dfmm.C
sources/: aca.hpp  blas.h  chebyshev.hpp  cluster.hpp  cluster.tpl  clusterbasis.hpp  conefactory.hpp  dhad.f  dimordertraits.hpp  dof.hpp  expansion.hpp  frequencyregime.hpp  functions.hpp  interpolator.hpp  kernelfunctions.hpp  l2lapplyer.hpp  level.hpp  m2lapplyer.hpp  m2lcomputer.hpp  m2lhandler.hpp  m2mapplyer.hpp  mapping.hpp  nearfield.hpp  permutations.hpp  planewave.hpp  plot.hpp  point.hpp  psdraw.hpp  relations.hpp  relationsetter.hpp  storage.hpp  storage.tpl  symmetries.hpp  tensor.hpp  tensorproduct.hpp  transferhandler.hpp  zhad.f
